again coming back to localhost

--- a/kubectl_ansible.yml
+++ b/kubectl_ansible.yml
@@ -1,7 +1,11 @@
 ---
-- hosts: localhost
-  become: True
-  tasks:
-    - shell: echo 'test'
-      register: foo
-    - debug: msg="the echo was {{ foo.stdout }}"
+  - name: "Playing with Ansible and Git"
+    hosts: localhost
+    connection: local 
+    tasks:
+
+    - name: "just execute a ls -lrt command"
+      shell: "ls -lrt"
+      register: "output"
+
+    - debug: var=output.stdout_lines
