--- a/kubectl_ansible.yml
+++ b/kubectl_ansible.yml
@@ -9,7 +9,7 @@
         - ./defaults/main.yml
         - ./vars/main.yml
       cluster_name: tf-gke-k8s
-      service_account_file: "~/Downloads/credentials.json"
+      service_account_file: "/home/mykhailo/Downloads/credentials.json"
       project: qwiklabs-gcp-02-e93eeca48aba
       auth_kind: serviceaccount
       scopes:
