Jenkinfile updated. withRegistry plugin used

--- a/petclinic-deployment.yaml
+++ b/petclinic-deployment.yaml
@@ -17,6 +17,7 @@ spec:
              image: ekimkuznetsov/petclinic:tagversion
              ports:
                - containerPort: 8080
+             imagePullPolicy: Always
   replicas: 1
   selector:
     matchLabels:
